# signing-gateway

./: .gitignore  Cargo.toml  Dockerfile  README.md  auth.toml  build.rs  config.toml  keys.toml  start.sh
proto/: signing.proto
src/: config.rs  main.rs
src/grpc/: mod.rs  service.rs  signing.v1.rs
src/hsm/: cluster.rs  mod.rs  software.rs
src/http/: handlers.rs
