[package]
name = "signing-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "signing-gateway"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# gRPC
tonic = { version = "0.11", features = ["tls"] }
tonic-reflection = "0.11"
prost = "0.12"

# Crypto (dùng cho software HSM và verify phía gateway)
ring = "0.17"
rsa = { version = "0.9", features = ["pem"] }
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
p384 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
pkcs8 = { version = "0.10", features = ["pem", "std"] }

# PKCS#11 — HSM cluster (Luna SA, nShield Connect, CloudHSM, SoftHSM2)
cryptoki = { version = "0.6", optional = true }

# Config & serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.14"
toml = "0.8"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
once_cell = "1"
zeroize = { version = "1", features = ["derive"] }
bytes = "1"
http = "1"
deadpool = "0.12"        # session pool cho HSM

[features]
default = ["software-hsm"]
software-hsm = []
hsm-cluster = ["dep:cryptoki"]   # PKCS#11 — production HSM cluster

[build-dependencies]
tonic-build = "0.11"
